package src.behavioral.observer;

public class Coche implements Observer{
    @Override
    public void update(Semaforo semaforo) {
        if(semaforo.getStatus().equals("ROJO_COCHE")){
            System.out.println("Semaforo rojo para coche");
        } else {
            System.out.println("Semaforo verde para coche");
        }
    }
}
