package src.behavioral.observer;

public interface Observer {
    void update(Semaforo semaforo);
}
